...

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/accountSettingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/text_border_bottom"
            android:padding="15dp"
            android:text="@string/account"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/accountLoginButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
...
            android:onClick="redirectToLogin"
            android:text="@string/login"
            android:textColor="@color/white"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/accountSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="20dp">
...

                <TextView
                    android:id="@+id/usernameText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@+id/usernameEdit"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/usernameEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/emailText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@+id/emailEdit"
                    android:text="@string/e_mail" />

                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@+id/passwordEdit"
                    android:text="@string/password" />

                <Button
                    android:id="@+id/passwordReset"
                    android:layout_width="45dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="@color/lightGray"
                    android:onClick="clickResetPassword"
                    android:text="@string/reset" /> <!-- text is dynamically updated -->
...
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/verify_email" />

                <Button
                    android:id="@+id/verifiedButton"
                    android:layout_width="45dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="@color/lightGray"
                    android:onClick="sendEmailVerification"
                    android:text="@string/send_email" /> <!-- text is dynamically updated -->
...
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete_account" />

                <Button
                    android:id="@+id/deleteAccountButton"
                    android:layout_width="45dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:onClick="clickDeleteAccount"
                    android:text="@string/delete"
                    android:textColor="@color/white" /> <!-- text is dynamically updated -->

            </LinearLayout>

            <Button
                android:id="@+id/saveAccountSettingsButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="savePersonalInfos"
                android:text="@string/save_account_settings"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="clickSignOut"
...
