...
    <string name="title_activity_location">Nearby</string>
    <string name="invalid_email_error">Requires a valid email</string>
    <string name="invalid_password_error">Password must be at least 6 characters</string>
    <string name="toast_authentication_failed">Authentication Failed</string>
    <string name="gps_network_not_enabled">GPS location is not enabled.</string>
    <string name="open_location_settings">Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="add_poi_name">ex: Akihabara</string>
    <string name="add_poi_fiction">ex: Steins;Gate</string>
    <string name="add_poi_position_wiki">From wiki link</string>
    <string name="enter_wikipedia_link">Enter a link to a Wikipedia article that contains coordinates :</string>
    <string name="wikipedia_link">Enter a Wikipedia link…</string>
    <string name="get_coordinates">Get coordinates</string>
...
    <string name="vote">Vote</string>
    <string name="pictures">Pictures</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="user_reviews">User reviews</string>
    <string name="add_a_review">Add a review</string>
    <string name="nearby">Nearby</string>
    <string name="delete">Delete</string>
    <string name="notifications">Notifications</string>
    <string name="some_annoying_notifications">Some annoying notifications</string>
    <string name="profile_is_public">Profile is public</string>
    <string name="save_account_settings">Save account settings</string>
    <string name="fiktion_app_logo">Fiktion app logo</string>
    <string name="reset">Reset</string>
...
