...
            android:layout_height="wrap_content" />

    </ScrollView>

    <!-- navigation drawer -->
    <ListView
        android:id="@+id/menu_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFF"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
...
